# dtos/audience/update.go
@@ -1,0 +1,6 @@
+package audience_dtos
+
+type UpdateAudienceDTO struct {
+	DisplayName string `json:"display_name"`
+	Description string `json:"description"`
+}
